Use jumbotron layout on home page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,5 +15,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-body { margin-top: 60px; }
+body {
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
 
