--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,9 @@
 
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
+@import "bootswatch/darkly/variables";
 @import "bootstrap";
+@import "bootswatch/darkly/bootswatch";
 
 body {
   padding-top: 50px;
