Redirect to translate page after sign in.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,12 @@
 @import "bootstrap";
 @import "bootswatch/darkly/bootswatch";
 
-body {
+body.layout-jumbotron {
   padding-top: 50px;
   padding-bottom: 20px;
+}
+
+body {
+  padding-top: 75px;
 }
 
