--- a/app/views/layouts/jumbotron.html.erb
+++ b/app/views/layouts/jumbotron.html.erb
@@ -21,7 +21,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body class="layout-jumbotron">
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
