--- a/app/views/layouts/jumbotron.html.erb
+++ b/app/views/layouts/jumbotron.html.erb
@@ -25,26 +25,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Translate Assistant</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <% if user_signed_in? %>
-                <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-              <% else %>
-                <%= link_to "Sign In", new_user_session_path %>
-              <% end %>
-            </li>
-          </ul>
-        </div><!--/.navbar-collapse -->
+        <%= render partial: '/layouts/navbar' %>
       </div>
     </nav>
 
