Changed Navbar and added about and howitworks pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <div class="starter-template">
-  <h1>Bootstrap starter template</h1>
-  <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+  <h1>Translate the Bible<br>Quicker and Easier</h1>
+  <p class="lead">Use this awesome app to translate the bible for those who need it!<br> Here are some more words that sound great.</p>
+  <a href="/signup"><button class="btn btn-warning btn-lg">Get Started</button></a>
 </div>
 
