--- a/app/views/home/translate.html.erb
+++ b/app/views/home/translate.html.erb
@@ -1,2 +1,8 @@
-<h1>Hello, world!</h1>
+<div ng-app="translateAssistant">
+  <h1>Hello, world!</h1>
+  <div ng-controller="TranslateController">
+    <input type="text" ng-model="foo">
+    {{foo}}
+  </div>
+</div>
 
