--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,3 +69,21 @@ footer {
 	}
 }
 
+.selection-disabled {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+.source-text {
+  color: #151515;
+}
+
+.source-text > .highlighted {
+  background-color: #1159b4;
+  color: #ffffff;
+}
+
