--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,2 @@
 <h1>About</h1>
-<p class="lead">Use this awesome app to translate the bible for those who need it!<br> Here are some more words that sound great.</p>
-<a href="#"><button class="btn btn-warning btn-lg">Get Started</button></a>
+<p class="lead">Here is a sentence about BTA<br> Here are some more words that sound great.</p>
