--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,3 @@
-<div class="starter-template">
-  <h1>Translate the Bible<br>Quicker and Easier</h1>
-  <p class="lead">Use this awesome app to translate the bible for those who need it!<br> Here are some more words that sound great.</p>
-  <a href="/signup"><button class="btn btn-warning btn-lg">Get Started</button></a>
-</div>
-
+<h1>Translate the Bible<br>Quicker and Easier</h1>
+<p class="lead">Use this awesome app to translate the bible for those who need it!<br> Here are some more words that sound great.</p>
+<a href="/users/sign_up"><button class="btn btn-info btn-lg">Get Started</button></a>
