--- a/app/views/home/how_it_works.html.erb
+++ b/app/views/home/how_it_works.html.erb
@@ -1,3 +1,2 @@
 <h1>How it Works</h1>
-<p class="lead">Use this awesome app to translate the bible for those who need it!<br> Here are some more words that sound great.</p>
-<a href="#"><button class="btn btn-warning btn-lg">Get Started</button></a>
+<p class="lead">Quick sentence about how BTA works.<br> Here are some more words that sound great.</p>
