--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,31 +5,25 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <a class="navbar-brand" href="/">Translate Assistant</a>
+  <a class="navbar-brand" href="/"><img src="/assets/BTA-Logo.png" class="img-responsive"></a>
 </div>
 
 <div id="navbar" class="collapse navbar-collapse">
   <ul class="nav navbar-nav navbar-right">
-    <li style="margin-left: 30px;">
-      <p class="navbar-btn">
-        <%= link_to "About", about_path, class: "btn btn-warning" %>
-      </p>
+    <li style="margin: 0 15px;">
+        <%= link_to "About", about_path %>
     </li>
 
-    <li style="margin-left: 30px;">
-      <p class="navbar-btn">
-        <%= link_to "How it works", how_it_works_path, class: "btn btn-warning" %>
-      </p>
+    <li style="margin: 0 15px;">
+        <%= link_to "How it works", how_it_works_path %>
     </li>
 
-    <li style="margin-left: 30px;">
-      <p class="navbar-btn">
+    <li style="margin: 0 15px;">
         <% if user_signed_in? %>
-          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-warning' %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         <% else %>
-          <%= link_to "Sign In", new_user_session_path, class: 'btn btn-warning' %>
+          <%= link_to "Sign In", new_user_session_path %>
         <% end %>
-      </p>
     </li>
   </ul><!--/.navbar-nav -->
 </div><!--/.nav-collapse -->
