refactored the jumbotron with conditional

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,3 @@
+<% @jumbotron = true %>
 <h1>About</h1>
 <p class="lead">Here is a sentence about BTA<br> Here are some more words that sound great.</p>
