--- a/app/views/home/how_it_works.html.erb
+++ b/app/views/home/how_it_works.html.erb
@@ -1,2 +1,3 @@
+<% @jumbotron = true %>
 <h1>How it Works</h1>
 <p class="lead">Quick sentence about how BTA works.<br> Here are some more words that sound great.</p>
