--- a/app/views/home/translate.html.erb
+++ b/app/views/home/translate.html.erb
@@ -1,3 +1,5 @@
+<% @body_class = "body-white body-extra-top-padding" %>
+
 <div ng-app="translateAssistant">
   <div ng-controller="TranslateController" style="font-size: 32pt;">
     <div class="source-text" style="height: 400px" ng-mouseup="clearHighlight()">
