Update the nabber spacing and the favicon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,10 @@ body.body-extra-top-padding {
 }
 
 .navbar-brand {
-	padding: 2px 0;
+	padding: 10px 0;
+}
+.nav li a {
+	padding: 25px 25px;
 }
 
 .jumbotron {
