Change body class of about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,4 @@
 <% @jumbotron = true %>
+<% @body_class = "about-page" %>
 <h1>About</h1>
 <p class="lead">Here is a sentence about BTA<br> Here are some more words that sound great.</p>
