Working search box for definitions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@ body {
 
 body.body-white {
   background-color: #ffffff;
+  color: #222;
 }
 
 body.body-extra-top-padding {
@@ -115,7 +116,6 @@ footer {
 }
 
 .source-text {
-  color: #151515;
   text-align: justify;
 }
 
@@ -124,3 +124,17 @@ footer {
   color: #ffffff;
 }
 
+.propertyPane h3 {
+  color: #1159b4;
+}
+
+.propertyCompleted h3 {
+  color: green;
+}
+
+.propertyPane .searchContainer {
+  margin: 2px;
+  background-color: #1159b4;
+  padding: 2px;
+  border-radius: 5px;
+}
