--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Forgot your password?</h2>
+<% @body_class = "sign-up-page" %>
+<div class="well bump-down">
+	<h1>Forgot your password?</h1>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "form-horizontal" }) do |f| %>
+	  <%= devise_error_messages! %>
+	  <fieldset>
+		  <div class="form-group">
+		    <%= f.label :email, class: "col-lg-2 control-label" %>
+		    <div class="col-lg-4">
+		      <%= f.email_field :email, autofocus: true, class: "form-control" %>
+		  	</div>
+		  </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+		  <div class="actions form-group">
+      		<div class="col-lg-10 col-lg-offset-2">
+		      <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+		    </div>
+		  </div>
+	  </fieldset>
+	<% end %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+	<%= render "devise/shared/links" %>
+</div>
