--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,39 @@
-<h2>Sign up</h2>
+<% @body_class = "sign-up-page" %>
+<div class="well bump-down">
+<h1>Sign up</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal"}) do |f| %>
   <%= devise_error_messages! %>
+  
+  <fieldset>
+    <div class="form-group">
+        <%= f.label :email, class: "col-lg-2 control-label" %>
+      <div class="col-lg-4">
+        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password, class: "col-lg-2 control-label" %>
+      <div class="col-lg-4">
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password_confirmation, class: "col-lg-2 control-label" %>
+      <div class="col-lg-4">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="actions form-group">
+      <div class="col-lg-10 col-lg-offset-2">
+        <%= f.submit "Sign up", class: "btn btn-primary" %>
+      </div>
+    </div>
+  </fieldset>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
