--- a/app/views/home/how_it_works.html.erb
+++ b/app/views/home/how_it_works.html.erb
@@ -1,3 +1,4 @@
 <% @jumbotron = true %>
+<% @body_class = "works-page" %>
 <h1>How it Works</h1>
 <p class="lead">Quick sentence about how BTA works.<br> Here are some more words that sound great.</p>
