--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,19 +12,19 @@
 
 <div id="navbar" class="collapse navbar-collapse">
   <ul class="nav navbar-nav navbar-right">
-    <li>
-        <%= link_to "About", about_path %>
+    <li <% if @body_class == "about-page" %>class="active"<% end %>>
+      <%= link_to "About", about_path %>
     </li>
 
-    <li>
-        <%= link_to "How it works", how_it_works_path %>
+    <li <% if @body_class == "works-page" %>class="active"<% end %>>
+        <%= link_to "How it works", how_it_works_path, class: "active"  %>
     </li>
 
-    <li>
+    <li <% if @body_class == "sign-up-page" %>class="active"<% end %>>
       <% if user_signed_in? %>
-        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "active"  %>
       <% else %>
-        <%= link_to "Sign In", new_user_session_path %>
+        <%= link_to "Sign In", new_user_session_path, class: "active"  %>
       <% end %>
     </li>
   </ul><!--/.navbar-nav -->
