--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <div class="container">
       <footer>
         <ul class="footer-list">
-          <li><span class="glyphicon glyphicon-home"></span><a href="https://goo.gl/maps/d3Mzd248Few"><span class="footer-text">3624 Texas Trail, Hurst, TX 76054</span></a></li>
+          <li><span class="glyphicon glyphicon-home"></span><a href="https://goo.gl/maps/yxCY8HG3FXS2"><span class="footer-text">32 Oak Tree Dr. New Smyrna Beach, FL 32169</span></a></li>
           <li><span class="glyphicon glyphicon-earphone"></span><a href="tel:3864024299"><span class="footer-text">386-402-4299</span></a></li>
           <li><span class="glyphicon glyphicon-envelope"></span><a href="mailto:Tod.Allman@TheBibleTranslatorsAssistant.org" class="footer-text">Tod.Allman@TheBibleTranslatorsAssistant.org</span></a></li>
         </ul>
