--- a/app/views/home/translate.html.erb
+++ b/app/views/home/translate.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <div class="col-lg-4 col-md-6" style="min-height:600px">
-      <div class="legend">
+      <div class="legend propertyPane">
         <div ng-repeat="wordGroup in intersectingWordGroups" ng-click="highlightWordGroup(wordGroup)" style="text-overflow: ellipsis; height: 24px; white-space: nowrap; overflow: hidden; cursor: pointer;">
           <span ng-style="{ 'width': '14px', 'height': '3px', 'margin': '0 4px 3px 0', 'background-color': colorForWordGroup(wordGroup), 'display': 'inline-block' }"></span>
           {{textForWordGroup(wordGroup)}}
