--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,14 +17,9 @@
 @import "bootstrap";
 @import "bootswatch/darkly/bootswatch";
 
-
 body.body-white {
   background-color: #ffffff;
   color: #222;
-}
-
-body.body-extra-top-padding {
-  padding-top: 75px;
 }
 
 .navbar {
@@ -132,10 +127,14 @@ label.ng-binding {
 .source-text {
   text-align: justify;
   border: 2px gray solid;
+  border-top: none;
+  font-size: 24px;
+  line-height: 45px;
 }
 
 .pane-container {
 	border: 2px gray solid;
+	border-top: none;
 	border-left: none;
 }
 
