--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,6 +130,8 @@ label.ng-binding {
   border-top: none;
   font-size: 24px;
   line-height: 45px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .pane-container {
