Hide footer on translate page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,6 +124,10 @@ label.ng-binding {
             user-select: none;
 }
 
+.translate-page footer {
+  display: none;
+}
+
 .source-text {
   text-align: justify;
   border: 2px gray solid;
