--- a/app/views/home/translate.html.erb
+++ b/app/views/home/translate.html.erb
@@ -1,4 +1,4 @@
-<% @body_class = "body-white" %>
+<% @body_class = "body-white translate-page" %>
 
 <div ng-app="translateAssistant">
   <div ng-controller="TranslateController" tr-resize-panes>
