Add translate to navbar when signed in, move marketing navbar items to left.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,8 +30,9 @@ body.body-white {
 	margin-bottom: 17px;
 }
 .navbar-brand {
-	padding-top: 10px;
-	padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 15px;
 }
 
 .jumbotron {
